Fixed nav bar alignment

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -57,3 +57,7 @@ li.settings {
 ul.menu > li > form {
 	padding-top: 5px;
 }
+
+.menu-align {
+	padding-top: 18px !important;
+}
